terraform/providers/aws/us-east-1/elastic_ips.tf
resource "aws_eip" "mail" {
  instance = "${aws_instance.mail.id}"
  vpc      = true

  tags = {
    Name = "mail"
  }
}
